--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"next-safe-action": "^8.0.8",
 		"next-themes": "^0.4.6",
 		"next-zod-route": "^1.0.0",
+		"nuqs": "^2.8.0",
 		"react": "19.1.0",
 		"react-day-picker": "^9.9.0",
 		"react-dom": "19.1.0",
